# toxicbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ansible-playbook.yml  config.container.json  config.debug.json  config.default.json  config.json.default  config.tests.json  docker-compose.yml  main.py  op.toml  op.yaml  pycodestyle  pylintrc  pyproject.toml  requirements.in  requirements.txt  schema.sql  tasks.py  toxic.service  toxicbot.service
.github/workflows/: linter-and-tests.yml  python-app.yml
ansible/: deploy-playbook.yml  prepare-playbook.yml
compose/: base.yml  debug.yml  local.yml  prod.yml  tests.yml
db/: Dockerfile  createdb.sql  run.py
db/migrations/: 0001-init.sql
html/: chats.html  group.html  messages.html  user.html
makefiles/: Makefile.deploy  Makefile.dev  Makefile.python
migrators/: captions.py  dump_to_json.py  stickers.py
resources/: emoji_df_result.csv
resources/html/: chats.html  group.html
resources/taro/: data.csv
scripts/: backup.sh  backup_s3.py  backup_s3.sh  captions.py  deploy.sh  install.sh  logs.sh  port_forward.sh  ports.sh  pylint.sh  remote.sh  run.sh  run_background.sh  spotify.py  start-deps.sh  stop.sh  upload.sh
src/: config.py  db.py  handling.py  helpers.py  logging.py  translate.py
stack/: base.yml  debug.yml  local.yml  prod.yml  tests.yml
systemd/: toxic-main.service  toxic-server.service
tests/: test_splitters.py
toxic/: config.py  db.py  handling.py  interfaces.py  messenger.py  repository.py  workers.py
toxicbot/: config.py  db.py  handling.py  messenger.py  metrics.py
(+184 files in other folders)
