[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
name = "toxictgbot"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Syrovatsky <vyacheslav@syrovats.ky>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11, <3.12"
aiogram = "~3.3.0"
aiohttp = "~3.9.1"
asyncpg = "~0.29.0"
autopep8 = "~2.0.4"
boto3 = "~1.34.13"
colorama = "~0.4.4"
fastapi = "0.108.0"
gunicorn = "~21.2.0"
Jinja2 = "~2.11.2"
loguru = "~0.7.2"
lxml = "~5.0.0"
mypy = "~1.8.0"
pip-tools = "~7.3.0"
prometheus-client = "~0.19.0"
pylint = "~3.0.3"
pymorphy2 = "~0.9.1"
pymorphy2-dicts-ru = "~2.4.0"
pytest = "~7.4.4"
pytest-asyncio = "~0.23.3"
ruwordnet = "~0.0.3"
sentry-sdk = "~1.39.1"
spotipy = "~2.23.0"
starlette-exporter = "~0.17.1"
translate = "~3.6.1"
uvicorn = {version="~0.25.0", extras=["standard"]}

# Not needed by the bot itself, but by the tasks.py file.
invoke = "^2.2.0"
fabric = "^3.2.2"

[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
